--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <code>A piece of computer code</code><br>
 <samp>Sample output from a computer program</samp><br>
 <kbd>Keyboard input</kbd><br>
-<var>Variable</var>
+<var>Variabl</var>
 
 </body>
 </html>
